# conflux-segmentation

./: DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml
conflux_segmentation/: __init__.py  binary_segmenter.py  onnx.py  patch_segmenter.py  segmentation_result.py  segmenter.py  tile_segmenter.py  torch.py  utils.py
tests/: test_binary_segmenter.py  test_segmenter.py  test_utils.py
tests/unit/: test_binary_segmenter.py
