[tool.poetry]
name = "conflux-segmentation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1"
torch = {version = "^2", optional = true}
onnxruntime = {version = "^1", optional = true}


[tool.poetry.group.dev.dependencies]
ruff = "^0"
mypy = "^1"
pytest = "^8"

[tool.poetry.extras]
torch = ["torch"]
onnx = ["onnxruntime"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
